--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body {
   line-height: 1.4;
   font-weight: 400;
   color: #333;
+  height: 2000px;
 }
 a {
   text-decoration: none;
@@ -19,91 +20,15 @@ img {
   margin: auto;
   position: relative;
 }
-
 /* HEADER */
 header {
   width: 100%;
+  height: 120px;
+  position: fixed;
+  left: 0;
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.5);
 }
-header .main-visual {
-  height: 400px;
-  position: relative;
-  overflow: hidden;
-  background-color: #333;
-}
-header .swiper {
-  width: calc(1200px * 3 + 20px);
-  height: 400px;
-  position: absolute;
-  overflow: hidden;
-  left: 50%;
-  margin-left: calc((1200px * 3 + 20px) / -2);
-}
-header .swiper .swiper-wrapper {
-  
-}
-header .swiper .swiper-slide {
-  width: 1200px;
-  height: 400px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: .2;
-  transition: opacity 1s;
-  position: relative;
-}
-header .swiper .swiper-slide-active {
-  opacity: 1;
-}
-header .swiper .swiper-slide-active:hover {
-  text-decoration: underline;
-}
-header .swiper .swiper-slide.visual1 {
-  background-image: url(../image/main-visual_1.jpg);
-}
-header .swiper .swiper-slide.visual2 {
-  background-image: url(../image/main-visual_2.jpg);
-}
-header .swiper .swiper-slide.visual3 {
-  background-image: url(../image/main-visual_3.jpg);
-}
-header .swiper .swiper-slide a {
-  display: flex;
-  width: 1200px;
-  height: 380px;
-  color: #fff;
-  font-size: 40px;
-  justify-content: center;
-  align-items: flex-end;
-}
-header .swiper-prev,
-header .swiper-next {
-  color: #888;
-  width: 42px;
-  height: 42px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  outline: none;
-  cursor: pointer;
-  position: absolute;
-  top: 179px;
-  z-index: 1;
-}
-header .swiper-prev:hover,
-header .swiper-next:hover {
-  border: 1px solid #777;
-  box-sizing: border-box;
-}
-header .swiper-prev {
-  left: 50%;
-  margin-left: -660px;
-}
-header .swiper-next {
-right: 50%;
-margin-right: -660px;
-}
-
 /* LOGO */
 header .main-container {
   width: 100%;
@@ -154,11 +79,12 @@ header .main-menu .item .item__contents {
   overflow: hidden;
   position: fixed;
   left: 0;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, .5);
   transition: height .3s;
+  z-index: 1;
 }
 header .main-menu .item:hover .item__contents {
-  height: 400px;
+  height: 300px;
 }
 header .main-menu .item .item__contents .contents__menu {
   display: flex;
@@ -167,7 +93,6 @@ header .main-menu .item .item__contents .contents__menu {
 header .main-menu .item .item__contents ul {
   padding: 10px 20px 10px 15px;
 }
-
 header .main-menu .item .item__contents ul li .ctt-menu-ttl {
   font-size: 16px;
   font-weight: 700;
@@ -185,4 +110,97 @@ header .main-menu .item .item__contents ul li a {
 }
 header .main-menu .item .item__contents ul li:hover a {
   text-decoration: underline;
+  background-color: #fff;
+}
+header .badges {
+  width: 140px;
+  position: fixed;
+  top: 400px;
+  right: 0;
+  margin: 10px;
+}
+header .badges a {
+  
+}
+header .badges img {
+  border-radius: 10px;
+}
+/* MAIN-VISUAL */
+.main-visual {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  top: 120px;
+  overflow: hidden;
+  background-color: #333;
+}
+.main-visual .swiper {
+  width: calc(1200px * 3 + 20px);
+  height: 400px;
+  position: absolute;
+  overflow: hidden;
+  left: 50%;
+  margin-left: calc((1200px * 3 + 20px) / -2);
+}
+.main-visual .swiper .swiper-slide {
+  width: 1200px;
+  height: 400px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: .2;
+  transition: opacity 1s;
+  position: relative;
+}
+.main-visual .swiper .swiper-slide-active {
+  opacity: 1;
+}
+.main-visual .swiper .swiper-slide-active:hover {
+  text-decoration: underline;
+}
+.main-visual .swiper .swiper-slide.visual1 {
+  background-image: url(../image/main-visual_1.jpg);
+}
+.main-visual .swiper .swiper-slide.visual2 {
+  background-image: url(../image/main-visual_2.jpg);
+}
+.main-visual .swiper .swiper-slide.visual3 {
+  background-image: url(../image/main-visual_3.jpg);
+}
+.main-visual .swiper .swiper-slide a {
+  display: flex;
+  width: 1200px;
+  height: 380px;
+  color: #fff;
+  font-size: 40px;
+  justify-content: center;
+  align-items: flex-end;
+}
+.main-visual .swiper-prev,
+.main-visual .swiper-next {
+  color: #888;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  position: absolute;
+  top: 179px;
+  z-index: 1;
+}
+.main-visual .swiper-prev:hover,
+.main-visual .swiper-next:hover {
+  border: 1px solid #777;
+  box-sizing: border-box;
+}
+.main-visual .swiper-prev {
+  left: 50%;
+  margin-left: -660px;
+}
+.main-visual .swiper-next {
+right: 50%;
+margin-right: -660px;
 }
