--- a/css/main.css
+++ b/css/main.css
@@ -16,50 +16,38 @@ img {
   display: block;
 }
 .inner {
-  width: 1200px;
+  width: 1000px;
   margin: auto;
   position: relative;
 }
 /* HEADER */
 header {
   width: 100%;
-  height: 120px;
+  min-height: 120px;
   position: fixed;
   left: 0;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.5);
 }
-/* LOGO */
 header .main-container {
-  width: 100%;
+  max-width: 1000px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
 }
 header .main-container > .inner {
   height: 120px;
   border-bottom: 1px solid #c6c6c6;
 }
-header .logo {
-  width: 90px;
-  height: 90px;
-  padding: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-}
-header .logo img {
-  width: 80px;
-}
-
 /* MAIN-MENU */
 header .main-menu {
+  max-width: 46%;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 0;
   margin: 0 40px;
   z-index: 1;
@@ -79,7 +67,7 @@ header .main-menu .item .item__contents {
   overflow: hidden;
   position: fixed;
   left: 0;
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(255, 255, 255, .8);
   transition: height .3s;
   z-index: 1;
 }
@@ -88,7 +76,7 @@ header .main-menu .item:hover .item__contents {
 }
 header .main-menu .item .item__contents .contents__menu {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 header .main-menu .item .item__contents ul {
   padding: 10px 20px 10px 15px;
@@ -112,10 +100,88 @@ header .main-menu .item .item__contents ul li:hover a {
   text-decoration: underline;
   background-color: #fff;
 }
+/* LOGO */
+header .logo {
+  width: 7.5%;
+  height: 7.5;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+header .logo img {
+  width: 80px;
+}
+/* SEARCH */
+header .search {
+  height: 30px;
+  position: absolute;
+  right: 40px;
+  top: 10px;
+  display: flex;
+}
+header .search.focused input {
+  width: 150px;
+}
+header .search input {
+  width: 30px;
+  height: 30px;
+  padding: 2px 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  outline: none;
+  background-color: #fff;
+  font-size: 12px;
+  color: #333;
+  right: 0;
+  transition: width .4s;
+}
+header .search .material-icons {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  transition: .5s;
+}
+header .search.focused .material-icons {
+  opacity: 0;
+}
+/* SUB-MENU */
+header .sub-menu {
+  max-width: 46%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+header .sub-menu .menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+header .sub-menu .sub-item__name {
+  font-size: 18px;
+  padding: 5px 20px 30px 20px;
+  color: #333;
+}
+header .sub-menu .menu li {
+
+}
+header .sub-menu .menu a:hover {
+  text-decoration: underline;
+}
 header .badges {
   width: 140px;
   position: fixed;
-  top: 400px;
+  top: 150px;
   right: 0;
   margin: 10px;
 }
@@ -128,23 +194,23 @@ header .badges img {
 /* MAIN-VISUAL */
 .main-visual {
   width: 100%;
-  height: 400px;
-  position: relative;
-  top: 120px;
   overflow: hidden;
-  background-color: #333;
+}
+.main-visual .inner {
+  height: 520px;
 }
 .main-visual .swiper {
-  width: calc(1200px * 3 + 20px);
+  width: calc(1000px * 3 + 20px);
   height: 400px;
   position: absolute;
+  top: 120px;
   overflow: hidden;
   left: 50%;
-  margin-left: calc((1200px * 3 + 20px) / -2);
+  margin-left: calc((1000px * 3 + 20px) / -2);
+  background-color: #333;
 }
 .main-visual .swiper .swiper-slide {
-  width: 1200px;
-  height: 400px;
+  width: 1000px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -169,7 +235,7 @@ header .badges img {
 }
 .main-visual .swiper .swiper-slide a {
   display: flex;
-  width: 1200px;
+  width: 1000px;
   height: 380px;
   color: #fff;
   font-size: 40px;
@@ -198,9 +264,65 @@ header .badges img {
 }
 .main-visual .swiper-prev {
   left: 50%;
-  margin-left: -660px;
+  margin-left: -560px;
 }
 .main-visual .swiper-next {
 right: 50%;
-margin-right: -660px;
+margin-right: -560px;
+}
+
+/* Best Menu */
+.best-menu_container {
+  left: 0;
+  right: 0;
+  margin: auto;
+  max-width: 1000px;
+  display: flex;
+  justify-content: center;
+  /* background-color: orange; */
+}
+.best-menu_container .inner {
+  height: 150px;
+}
+.best-menu_container .best-mn {
+  /* height: 100px; */
+  width: 100%;
+  /* background-color: royalblue; */
+}
+.best-menu_container .best-mn .content {
+  width: 100%;
+  margin: 100px 0 50px;
+  text-align: center;
+  /* background-color: yellow; */
+}
+.best-menu_container .best-mn .content p {
+  margin: 7px 0;
+}
+.best-menu_container .best-mn .content p.title {
+  font-size: 24px;
+  color: #333;
+}
+.best-menu_container .best-mn .content p.bar {
+  width: 50px;
+  height: 1px;
+  background-color: #333;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.best-menu_container .best-mn .content p.sub-title {
+  font-size: 14px;
+  color: #777;
+}
+.best-menu_container .best-mn .content-list {
+  /* position: absolute; */
+  width: 100%;
+  height: 500px;
+  background-color: rosybrown;
+}
+.best-menu_container .best-mn .content-list ul {
+
+}
+.best-menu_container .best-mn .content-list ul .grid {
+
 }
